Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62421

QSerialBus Modbus master example: read address is not incremented

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.2
    • 5.9.1
    • SerialBus: MOD Bus
    • None

      In the Modbus Master example, in this file :

      http://code.qt.io/cgit/qt/qtserialbus.git/tree/examples/serialbus/modbus/master/mainwindow.cpp

      Line 246, the address before displaying the value is not incremented.

      Replace:

      for (uint i = 0; i < unit.valueCount(); i++) { const QString entry = tr("Address: %1, Value: %2").arg(unit.startAddress())

      with:

      for (uint i = 0; i < unit.valueCount(); i++) { const QString entry = tr("Address: %1, Value: %2").arg(unit.startAddress() + i){{}}

        For Gerrit Dashboard: QTBUG-62421
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            arabine Anthony Rabine
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes