Fix address counter for received modbus register entries

THis happens when the number of retrieved entries is larger than 1.

Task-number: QTBUG-62421
Change-Id: I250d528914d887d0c9be34cd828763f87a5099e7
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>